--- a/Master-Branch/css/common.css
+++ b/Master-Branch/css/common.css
@@ -1,46 +1,35 @@
 /* BASIC PAGE NEEDS */
+
+
 body{display:block;}
 video, img{max-width:100%; height:auto;}
-h1#usclogo {
-	float: right;
-	width: 198px;
-	height: 60px;
-	margin: 0;
-}
-h1#usclogo a {
-	display: block;
-	width: 176px;
-	height: 54px;
-	padding:11px;
-	background-color:#900;
-	background:url(../images/usc-shield-name-white.png) 0 11px no-repeat;
-	text-indent: -9999px;
-}
 
-.navbar-default {
-    background-color: #900!important;
-    border-color: #030033;
-}
+/* USC logo Requirements */
+h1#usclogo {float: right;width: 198px;height: 60px;margin: 0;}
+h1#usclogo a {display: block;width: 176px;height: 54px;padding:11px;background-color:#900;background:url(../images/usc-shield-name-white.png) 0 11px no-repeat;text-indent: -9999px;}
+.navbar-default {background-color: #900!important; border-color: #030033;}
 .fontSizeM{font-size: 14px; color:white;}
-
-.red-color{
-    background-color: red;
-}
+.red-color{ background-color: red;}
 .margin-top-large{margin-top: 60px;}
 .margin-top-medium{margin-top: 40px;}
 .equal-margin {margin:6.25% 6.25% 6.25% 6.25%;}
 .text-style{font-family: 'Muli', sans-serif; font-size:16px;}
 
-ul.topnav {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #fff;
-}
+/* Lecture Series */
+.title-heading{font-size:1.5em;}
+.date-style{ font-style: oblique;}
+.location-style{font-size: 1.2em;}
+.audience-style{font-size: 1.2em;}
+.speaker-style{font-size: 1.2em;}
+.talk-tiltle{font-size: 1.2em;}
+.series-style{font-size: 1.2em;}
+.test-style{}
+.margin-tp-5{margin-top: 7px;}
+.properText{    text-align: justify;text-justify: inter-word;}
 
-ul.topnav {
-    list-style-type: none;
-}
-ul.topnav li, ul.topnav li a {
-    display: inline-block;
-}
+/*Top Navigation Bar */
+.displayUL{list-style:none;position:absolute;}
+.innerList{display:inline-block; margin-top: 15px;margin-left: 15px;}
+.listFontStyle{color:white;font-size: 1.3em;}
+
+
