Updated New Page for Team members

--- a/masterBranch/css/common.css
+++ b/masterBranch/css/common.css
@@ -44,6 +44,7 @@ h1#usclogo a {display: block;width: 176px;height: 54px;padding:11px;background-c
 .lineWidth{width:67%;}
 .separator {width:67%; border: none;height: 1px; color: #333; background-color: #333; }
 .insideContent{margin-top: 20px;font-size: medium;}
+.mission{margin-left: 22%;}
 
 
 /* Lecture Series */
